--- a/assets/main.scss
+++ b/assets/main.scss
@@ -13,20 +13,23 @@
 }
 
 html {
- font-size: 16px;
- word-spacing: 1px;
- -ms-text-size-adjust: 100%;
- -webkit-text-size-adjust: 100%;
- -moz-osx-font-smoothing: grayscale;
- -webkit-font-smoothing: antialiased;
- box-sizing: border-box;
- overflow-x: hidden;
- font-family: 'Lato', sans-serif;
+  font-size: 16px;
+  word-spacing: 1px;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 *, *:before, *:after {
- box-sizing: border-box;
- margin: 0;
+  box-sizing: border-box;
+  margin: 0;
+}
+
+body {
+  font-family: 'Lato', sans-serif;
 }
 
 .page-enter-active, .page-leave-active {
