--- a/assets/main.scss
+++ b/assets/main.scss
@@ -12,24 +12,8 @@
  background: #D71B14;
 }
 
-html {
-  font-size: 16px;
-  word-spacing: 1px;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  box-sizing: border-box;
-  overflow-x: hidden;
-}
-
-*, *:before, *:after {
-  box-sizing: border-box;
-  margin: 0;
-}
-
-body {
-  font-family: 'Lato', sans-serif;
+.no-overflow-y {
+  overflow-y: hidden;
 }
 
 .page-enter-active, .page-leave-active {
